output.txt
   Compiling goldilocks v0.7.1 (/home/ubuntu/xpinsach/dev/pil2-proofman/goldilocks)
   Compiling proofman-common v0.7.1 (/home/ubuntu/xpinsach/dev/pil2-proofman/common)
error[E0308]: mismatched types
   --> common/src/extended_field.rs:179:23
    |
174 | impl<F: Field> Neg for ExtensionField<F> {
    |      - expected this type parameter
...
179 |         Self { value: self.value.map(F::neg) }
    |                       ^^^^^^^^^^^^^^^^^^^^^^ expected `[F; 3]`, found `[<F as Neg>::Output; 3]`
    |
    = note: expected array `[F; 3]`
               found array `[<F as Neg>::Output; 3]`
help: consider further restricting this bound
    |
174 | impl<F: Field<Output = F>> Neg for ExtensionField<F> {
    |              ++++++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `proofman-common` (lib) due to 1 previous error
